--- a/index.html
+++ b/index.html
@@ -8,25 +8,45 @@
     <style>
         body {
             font-family: "Microsoft JhengHei", Arial, sans-serif;
-            margin: 20px;
-            padding: 20px;
-            background-color: #ffffff;
+            margin: 10px;
+            padding: 10px;
+            background-color: #f7f7f7;
             text-align: left;
         }
 
         .container {
-            max-width: 800px;
-            margin: auto;
-            background: rgb(255, 255, 255);
+            width: 80%;
+            margin: 20px auto;
             padding: 20px;
+            background-color: #fff;
+            /* 白色背景 */
             border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            /* 圓角效果 */
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            /* 陰影效果 */
         }
 
-        h2,
+        h2 {
+            text-align: center;
+            color: #333;
+            /* 深灰色文字 */
+            font-size: 1.5em;
+            /* 調整 h2 字體大小，更小 */
+            margin-bottom: 30px;
+            font-family: 'Roboto', sans-serif;
+            /* 改變標題字型 */
+        }
+
         h3 {
             text-align: center;
-            /* 標題與副標題都置中 */
+            color: #333;
+            /* 深灰色文字 */
+            font-size: 1.2em;
+            /* 調整 h3 字體大小，更小 */
+            margin-bottom: 20px;
+            /* 你可以調整這個值 */
+            font-family: 'Microsoft JhengHei', Arial, sans-serif;
+            /* 微軟正黑體 */
         }
 
         .place-container {
@@ -37,6 +57,9 @@
             background-color: #fff5f5;
             /* 淺粉色背景 */
             margin-bottom: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            /* 輕微陰影 */
+
         }
 
         .place {
@@ -59,32 +82,59 @@
             text-decoration: underline;
         }
 
+        .place-container {
+            width: 80%;
+            max-width: 600px;
+            margin: 20px auto;
+            /* 上下和左右都會有間距，調整這裡可以控制上下間距 */
+            padding: 20px;
+            background-color: #f9f9f9;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border: 2px solid #ff6f61;
+            background-color: #fff5f5;
+            margin-bottom: 20px;
+            /* 這個是保證框框之間有間距 */
+        }
+
+        /* 按鈕容器 */
         .button-container {
             display: flex;
             flex-wrap: wrap;
+            /* 讓按鈕自動換行 */
             justify-content: center;
-            /* 按鈕置中 */
+            /* 按鈕居中 */
             gap: 15px;
-            /* 保持按鈕間距 */
-            margin-bottom: 20px;
-            /* 控制按鈕容器底部的間距 */
+            /* 按鈕之間的間距 */
         }
 
         .day-btn {
-            width: 100px;
+            width: 80px;
+            /* 設定固定寬度 */
             height: 40px;
-            display: inline-block;
-            text-align: center;
-            cursor: pointer;
-            line-height: 40px;
-            color: #000000;
-            background-color: transparent;
+            /* 設定固定高度 */
+            font-size: 14px;
+            /* 設定一致的字體大小 */
+            margin: 8px 5px;
+            /* 設定按鈕的上下左右間距 */
+            background-color: #fff5dd;
+            /* 背景顏色 */
+            color: rgb(255, 119, 0);
+            /* 文字顏色 */
             border: 1px solid #ffb300;
-            transition: all .3s linear;
-            min-width: 80px;
-            /* 保持按鈕大小一致 */
-            margin-top: 10px;
-            /* 保持按鈕上下的間距 */
+            /* 邊框顏色 */
+            border-radius: 5px;
+            /* 邊框圓角 */
+            display: flex;
+            /* 使用 Flexbox 來控制文字對齊 */
+            justify-content: center;
+            /* 水平置中 */
+            align-items: center;
+            /* 垂直置中 */
+            cursor: pointer;
+            /* 顯示手型指標 */
+            transition: background-color 0.3s ease;
+            /* 平滑過渡 */
         }
 
         .day-btn:hover {
@@ -121,12 +171,17 @@
 
 
         textarea {
-            width: 100%;
+            width: 80%;
             height: 100px;
             margin-top: 10px;
+            margin-left: 20px;
+            /* 左邊外距 */
+            margin-right: 20px;
+            /* 右邊外距 */
             padding: 10px;
             border: 1px solid #ccc;
             border-radius: 5px;
+            resize: none;
         }
 
         /* 將導航按鈕容器設定為置中 */
@@ -413,14 +468,16 @@
                 <p class="hours">營業時間：11:00 - 22:00</p>
             </div>
         </div>
-        <h3>📌 MEMO</h3>
-        <textarea id="note" placeholder="請輸入..."></textarea>
-
-        <!-- 按鈕 -->
-        <div class="btn-container">
-            <button onclick="saveData()">💾 儲存</button>
-            <button onclick="clearData()">🗑 清除</button>
+        <div class="place-container">
+            <h3>📌 MEMO</h3>
+            <textarea id="note" placeholder="請輸入..."></textarea>
+            <!-- 按鈕 -->
+            <div class="btn-container">
+                <button onclick="saveData()">儲存</button>
+                <button onclick="clearData()">清除</button>
+            </div>
         </div>
+
 
         <!-- 這裡是上下頁和返回選單按鈕 -->
         <div class="navigation-btn-container">
@@ -610,8 +667,8 @@
 
         <!-- 按鈕 -->
         <div class="btn-container">
-            <button onclick="saveData()">💾 儲存</button>
-            <button onclick="clearData()">🗑 清除</button>
+            <button onclick="saveData()">儲存</button>
+            <button onclick="clearData()">清除</button>
         </div>
 
         <!-- 這裡是上下頁和返回選單按鈕 -->
@@ -741,8 +798,8 @@
 
         <!-- 按鈕 -->
         <div class="btn-container">
-            <button onclick="saveData()">💾 儲存</button>
-            <button onclick="clearData()">🗑 清除</button>
+            <button onclick="saveData()">儲存</button>
+            <button onclick="clearData()">清除</button>
         </div>
 
         <!-- 這裡是上下頁和返回選單按鈕 -->
@@ -846,8 +903,8 @@
 
         <!-- 按鈕 -->
         <div class="btn-container">
-            <button onclick="saveData()">💾 儲存</button>
-            <button onclick="clearData()">🗑 清除</button>
+            <button onclick="saveData()">儲存</button>
+            <button onclick="clearData()">清除</button>
         </div>
 
         <!-- 這裡是上下頁和返回選單按鈕 -->
@@ -1059,8 +1116,8 @@
 
         <!-- 按鈕 -->
         <div class="btn-container">
-            <button onclick="saveData()">💾 儲存</button>
-            <button onclick="clearData()">🗑 清除</button>
+            <button onclick="saveData()">儲存</button>
+            <button onclick="clearData()">清除</button>
         </div>
 
         <!-- 這裡是上下頁和返回選單按鈕 -->
@@ -1245,8 +1302,8 @@
 
         <!-- 按鈕 -->
         <div class="btn-container">
-            <button onclick="saveData()">💾 儲存</button>
-            <button onclick="clearData()">🗑 清除</button>
+            <button onclick="saveData()">儲存</button>
+            <button onclick="clearData()">清除</button>
         </div>
 
         <!-- 這裡是上下頁和返回選單按鈕 -->
@@ -1315,8 +1372,8 @@
 
         <!-- 按鈕 -->
         <div class="btn-container">
-            <button onclick="saveData()">💾 儲存</button>
-            <button onclick="clearData()">🗑 清除</button>
+            <button onclick="saveData()">儲存</button>
+            <button onclick="clearData()">清除</button>
         </div>
 
         <!-- 這裡是上下頁和返回選單按鈕 -->
@@ -1369,10 +1426,9 @@
         <h3>📌 MEMO</h3>
         <textarea id="note" placeholder="請輸入..."></textarea>
 
-        <!-- 按鈕 -->
         <div class="btn-container">
-            <button onclick="saveData()">💾 儲存</button>
-            <button onclick="clearData()">🗑 清除</button>
+            <button onclick="saveData()">儲存</button>
+            <button onclick="clearData()">清除</button>
         </div>
 
         <!-- 這裡是上下頁和返回選單按鈕 -->
