--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             font-family: "Microsoft JhengHei", Arial, sans-serif;
             margin: 10px;
             padding: 10px;
-            background-color: #f7f7f7;
+            background-color: #f9f9f9;
             text-align: left;
         }
 
@@ -296,6 +296,32 @@
             box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
             /* 活躍狀態的陰影 */
         }
+
+        .timeline {
+            border-left: 4px solid #4CAF50;
+            padding-left: 20px;
+            margin-left: 10px;
+        }
+
+        .day {
+            font-size: 20px;
+            font-weight: bold;
+            color: #333;
+            margin-top: 20px;
+        }
+
+        .event {
+            background: #fff;
+            padding: 10px;
+            border-radius: 5px;
+            margin-top: 10px;
+            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .time {
+            font-weight: bold;
+            color: #4CAF50;
+        }
     </style>
 </head>
 
@@ -384,38 +410,25 @@
     </div>
 
     <div id="itinerary-1" class="itinerary" style="display: none;">
-        <h3>第一天</h3>
-        <table>
-            <thead>
-                <tr>
-                    <th>時間</th>
-                    <th>行程</th>
-                    <th>備註</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>13:00-17:35</td>
-                    <td>🛫KHH<br>⬇️</br>🛬NRT</td>
-                    <td>飛機餐</td>
-                </tr>
-                <tr>
-                    <td>15:00-19:20</td>
-                    <td>🛫TPE<br>⬇️</br>🛬NRT</td>
-                    <td>飛機餐</td>
-                </tr>
-                <tr>
-                    <td>20:30-21:30</td>
-                    <td>成田機場<br>⬇️</br>民宿</td>
-                    <td>-</td>
-                </tr>
-                <tr>
-                    <td>21:40-00:00</td>
-                    <td>吃晚餐</td>
-                    <td>-</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="timeline">
+            <div class="day">Day 1 - 抵達東京</div>
+            <div class="event">
+                <span class="time">13:00-17:35</span> - 🛫KHH > 🛬NRT
+            </div>
+            <div class="event">
+                <span class="time">15:00-19:20</span> - 🛫TPE > 🛬NRT
+            </div>
+            <div class="event">
+                <span class="time">20:34</span> - 搭乘skyliner前往日暮里
+            </div>
+            <div class="event">
+                <span class="time">21:37-21:56</span> - 日暮里>JJ常磐線>南千住
+            </div>
+            <div class="event">
+                <span class="time">22:20</span> - 抵達民宿
+            </div>
+        </div>
+
         <h2>📍 民宿地址</h2>
         <div class="place-container">
             <p class="address">
@@ -425,6 +438,8 @@
                     2-chōme-4-7 Nihonzutsumi, Taito City, Tokyo 111-0021 日本
                 </a>
             </p>
+            <img src="C:\Users\amy55\OneDrive\文件\GitHub\travel\skyliner時刻表.png" alt="skyliner時刻表">
+
         </div>
         <h2>📍 南千住宵夜</h2>
         <div class="place-container">
