--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
         <table>
             <thead>
                 <tr>
-                    <th>成田機場第2･第3候機樓</th>
+                    <th>第2･第3候機樓</th>
                     <th>日暮里</th>
                 </tr>
             </thead>
@@ -545,6 +545,46 @@
                 <span class="time">22:30</span> - 東京車站>南千住
             </div>
         </div>
+
+        <h2>📍 木更津接駁時刻</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>東京八重洲</th>
+                    <th>木更津OUTLET</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>09:05</td>
+                    <td>09:55</td>
+                </tr>
+                <tr>
+                    <td>09:25</td>
+                    <td>10:15</td>
+                </tr>
+                <tr>
+                    <td>09:55</td>
+                    <td>10:45</td>
+                </tr>
+                <tr>
+                    <th>木更津OUTLET</th>
+                    <th>東京八重洲</th>
+                </tr>
+                <tr>
+                    <td>18:30</td>
+                    <td>19:20</td>
+                </tr>
+                <tr>
+                    <td>19:30</td>
+                    <td>20:20</td>
+                </tr>
+                <tr>
+                    <td>20:30</td>
+                    <td>21:20</td>
+                </tr>
+            </tbody>
+        </table>
 
         <h2>📍 東京車站早餐推薦 🍞☕🥐</h2>
         <div class="place-container">
