--- a/index.html
+++ b/index.html
@@ -348,9 +348,13 @@
             <li><input type="checkbox" id="item1"> 護照 & 身分證</li>
             <li><input type="checkbox" id="item2"> 外幣 & 信用卡</li>
             <li><input type="checkbox" id="item3"> 換洗衣物</li>
+            <li>衣服、褲子、內衣褲、帽子、襪子、外套</li>
             <li><input type="checkbox" id="item4"> 充電器 & 行動電源</li>
+            <li>行動電源要貼起來放夾鏈袋</li>
             <li><input type="checkbox" id="item5"> 盥洗用品</li>
+            <li>洗面乳、洗臉巾、牙膏牙刷、毛巾</li>
             <li><input type="checkbox" id="item6"> 個人藥品</li>
+            <li></li>
         </ul>
         <!-- 上下頁和返回選單按鈕 -->
         <div class="back-btn-container">
