--- a/index.html
+++ b/index.html
@@ -354,7 +354,6 @@
             <li><input type="checkbox" id="item5"> 盥洗用品</li>
             <li>洗面乳、洗臉巾、牙膏牙刷、毛巾</li>
             <li><input type="checkbox" id="item6"> 個人藥品</li>
-            <li></li>
         </ul>
         <!-- 上下頁和返回選單按鈕 -->
         <div class="back-btn-container">
@@ -798,8 +797,7 @@
                 <p class="hours">營業時間：10:00 - 19:00</p>
             </div>
             <div class="place">
-                <strong>壽喜燒今半 🥩</strong>
-                <p class="hours">營業時間：11:30 - 21:30</p>
+                <strong>淺草うなな（Asakusa Unana）鰻魚飯</strong>
             </div>
             <div class="place">
                 <strong>淺草花月堂 🍈（菠蘿麵包）</strong>
@@ -828,6 +826,9 @@
             <div class="place">
                 <strong>上野大勝軒 🍜（沾麵）</strong>
                 <p class="hours">營業時間：11:00 - 22:00</p>
+            </div>
+            <div class="place">
+                <strong>拉麵 鴨to蔥（Ramen Kamo to Negi）</strong>
             </div>
         </div>
 
@@ -1158,68 +1159,42 @@
     </div>
 
     <div id="itinerary-6" class="itinerary" style="display: none;">
-        <h3>第六天</h3>
-        <table>
-            <thead>
-                <tr>
-                    <th>時間</th>
-                    <th>行程</th>
-                    <th>備註</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>早上</td>
-                    <td>南千住<br>⬇️</br>原宿</td>
-                    <td>車票 ¥210</td>
-                </tr>
-                <tr>
-                    <td>中午</td>
-                    <td>原宿<br>⬇️</br>御臺場</td>
-                    <td>車票 ¥178</td>
-                </tr>
-                <tr>
-                    <td>下午</td>
-                    <td>御臺場<br>⬇️</br>新浦安</td>
-                    <td>車票 ¥286</td>
-                </tr>
-                <tr>
-                    <td>-</td>
-                    <td>新浦安<br>⬇️</br>三井花園酒店</td>
-                    <td>-</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="timeline">
+            <div class="day">Day 6 - 原宿→御臺場→新浦安</div>
+            <div class="event">
+                <span class="time">08:50</span> - 南千住>原宿
+            </div>
+            <div class="event">
+                <span class="time">09:25</span> - 原宿早餐
+                <li>Bills 鬆餅、杏桃鬆餅咖啡</li>
+            </div>
+            <div class="event">
+                <span class="time">11:30</span> - 前往御臺場
+                <li>搭乘 JR 山手線 → 百合海鷗線</li>
+            </div>
+            <div class="event">
+                <span class="time">12:30</span> - 御台場午餐 & 觀光
+            </div>
+            <div class="event">
+                <span class="time">18:00</span> - 搭車前往新浦安（三井花園飯店）
+                <li>百合海鷗線 → JR京葉線</li>
+            </div>
+            <div class="event">
+                <span class="time">19:00</span> - 新浦安晚餐 & 飯店休息
+            </div>
+        </div>
+
         <h2>📍 原宿</h2>
         <div class="place-container">
             <h3>🍽️ 必吃美食</h3>
             <div class="place">
-                <strong>Eggs ‘n Things 原宿店 🍳（夏威夷風早午餐）⭐</strong>
-                <li>
-                    鬆餅、班尼迪克蛋超受歡迎
-                </li>
-                <p class="hours">營業時間：09:00 - 21:00</p>
+                <strong>Bills 表參道（世界第一美味鬆餅） 🥞</strong>
             </div>
             <div class="place">
-                <strong>野口鮮魚店（生魚片丼） 🐟</strong>
-                <li>
-                    CP值超高的海鮮丼，米飯Q彈
-                </li>
-                <p class="hours">營業時間：11:30 - 14:00</p>
+                <strong>The Roastery by Nozy Coffee（精品咖啡） ☕</strong>
             </div>
             <div class="place">
-                <strong>竹下通り的可麗餅（Marion Crepes / Angel’s Heart） 🍓</strong>
-                <li>
-                    竹下通最具代表性的街頭甜點
-                </li>
-                <p class="hours">營業時間：10:00 - 21:00</p>
-            </div>
-            <div class="place">
-                <strong>Luke’s Lobster（龍蝦三明治） 🦞</strong>
-                <li>
-                    美式龍蝦三明治，料超多
-                </li>
-                <p class="hours">營業時間：11:00 - 20:30</p>
+                <strong>杏桃鬆餅咖啡（厚鬆餅） 🍰</strong>
             </div>
             <h3>🎡 必逛景點</h3>
             <div class="place">
@@ -1251,65 +1226,39 @@
         <div class="place-container">
             <h3>🍽️ 必吃美食</h3>
             <div class="place">
-                <strong>Bills Odaiba（世界第一的鬆餅） 🥞⭐</strong>
-                <li>
-                    超人氣鬆餅，來東京一定要試一次
-                </li>
-                <p class="hours">營業時間：08:30 - 21:00</p>
+                <strong>Eggs’n Things（夏威夷風早午餐）</strong>
             </div>
             <div class="place">
-                <strong>大江戶温泉物語 美食區 🍣</strong>
-                <li>
-                    在溫泉設施內享受地道日式料理
-                </li>
-                <p class="hours">營業時間：11:00 - 23:00</p>
+                <strong>Eggs’n Things（夏威夷風早午餐）</strong>
             </div>
             <div class="place">
-                <strong>台場一丁目商店街（復古小吃街）</strong>
-                <li>
-                    有很多復古風的日本零食 & 小吃
-                </li>
+                <strong>Eggs’n Things（夏威夷風早午餐）</strong>
             </div>
             <h3>🎡 必逛景點</h3>
             <div class="place">
-                <strong>DiverCity Tokyo Plaza & 獨角獸鋼彈 🤖⭐</strong>
-                <li>
-                    18公尺高的變形獨角獸鋼彈像
-                </li>
+                <strong>DiverCity Tokyo Plaza（購物 & RX-78-2鋼彈像） 🤖</strong>
             </div>
             <div class="place">
-                <strong>teamLab Borderless（沉浸式數位藝術） 🎨</strong>
-                <li>
-                    必訪的超美光影藝術展
-                </li>
+                <strong>台場海濱公園（適合散步、看自由女神像） 🌊</strong>
             </div>
             <div class="place">
-                <strong>富士電視台球形觀景台</strong>
-                <li>
-                    俯瞰御台場海景的好去處
-                </li>
+                <strong>teamLab Borderless（如重新開幕，可安排） 🎨</strong>
             </div>
             <div class="place">
-                <strong>AQUA CITY ODAIBA</strong>
-                <li>
-                    大型購物中心，有許多餐廳 & 伴手禮店
-                </li>
+                <strong>teamLab Borderless（如重新開幕，可安排） 🎨</strong>
             </div>
         </div>
         <h2>📍 新浦安</h2>
         <div class="place-container">
             <h3>🍽️ 必吃美食</h3>
             <div class="place">
-                <strong>Starbucks 舞浜 イクスピアリ店 ☕</strong>
-                <li>
-                    舞濱站旁的特色星巴克，有迪士尼風格
-                </li>
+                <strong>舞濱 Ikspiari 商場（多種餐廳選擇） 🍣🍜</strong>
             </div>
             <div class="place">
-                <strong>KUA`AINA（夏威夷漢堡） 🍔</strong>
-                <li>
-                    來自夏威夷的漢堡店，口感超厚實
-                </li>
+                <strong>Monsoon Cafe（亞洲風創意料理） 🍛</strong>
+            </div>
+            <div class="place">
+                <strong>築地食堂源ちゃん（新鮮海鮮丼） 🦐</strong>
             </div>
             <h3>🎡 必逛景點</h3>
             <div class="place">
