--- a/index.html
+++ b/index.html
@@ -1425,7 +1425,7 @@
                 <li>🚆搭乘JR + 巴士</li>
             </div>
             <div class="event">
-                <span class="time">11:30</span> - 退房前往酒酒井
+                <span class="time">11:30</span> - 酒酒井購物
             </div>
             <div class="event">
                 <span class="time">16:30</span> - (🛫KHH)前往成田機場
