--- a/index.html
+++ b/index.html
@@ -893,20 +893,18 @@
     <div id="itinerary-4" class="itinerary" style="display: none;">
 
         <div class="timeline">
-            <div class="day">🍣 Day 4｜築地市場、銀座、東京車站</div>
+            <div class="day">🍣 Day 4｜豐洲市場、銀座、東京車站、東京鐵塔</div>
             <div class="event">
-                <span class="time">08:50</span> - 南千住 → 築地市場
-                <li>🚆搭乘日比谷線</li>
+                <span class="time">07:30</span> - 南千住 → 豐洲市場
+                <li>🚆日比谷線 → 有樂町線</li>
             </div>
             <div class="event">
-                <span class="time">09:25</span> - 築地市場早餐（壽司大 / 海鮮丼）
+                <span class="time">08:00</span> - 豐洲市場內早餐
+                <li>（大和壽司 / 壽司大 / 仲家海鮮丼）</li>
             </div>
             <div class="event">
-                <span class="time">10:30</span> - 逛築地場外市場
-            </div>
-            <div class="event">
-                <span class="time">11:00</span> - 築地市場 → 銀座
-                <li>🚆搭成東京 Metro 銀座線</li>
+                <span class="time">11:00</span> - 豐洲市場 → 銀座
+                <li>🚆搭成有樂町線</li>
             </div>
             <div class="event">
                 <span class="time">11:30</span> - 逛 UNIQLO、三越百貨、Loft、無印良品
@@ -925,31 +923,51 @@
                 <span class="time">19:00</span> - 東京車站一番街（動漫周邊 & 拉麵街）
             </div>
             <div class="event">
-                <span class="time">20:00</span> - 東京車站夜景
-                <li>丸之內大樓夜景散步</li>
-            </div>
-            <div class="event">
-                <span class="time">22:00</span> - 東京車站 → 南千住
-                <li>🚆搭乘日比谷線</li>
+                <span class="time">20:00</span> - 東京車站 → 東京鐵塔(赤羽橋站)
+                <li>🚆JR 山手線 → 都營大江戶線</li>
+                <div class="event">
+                    <span class="time">20:30</span> - 東京鐵塔
+                    <li>欣賞東京夜景</li>
+                </div>
+                <div class="event">
+                    <span class="time">22:00</span> - 東京鐵塔 → 南千住
+                    <li>🚆搭乘都營大江戶線 → JR 山手線 → 日比谷線</li>
+                </div>
             </div>
         </div>
 
-        <h2>📍 築地市場</h2>
+        <h2>📍 豐洲市場</h2>
         <div class="place-container">
+            <h3>🍣 壽司 & 海鮮丼</h3>
             <div class="place">
-                <strong>大和壽司 / 壽司大（人氣握壽司店，早點去排隊！）</strong>
+                <strong>1️⃣ 壽司大（寿司大） ⭐⭐⭐⭐⭐</strong>
+                <li>🔥 特色：前築地市場傳奇壽司店，超新鮮、超高 CP 值！</li>
             </div>
             <div class="place">
-                <strong>築地天國（炸天婦羅）</strong>
+                <strong>2️⃣ 大和壽司（大和寿司） ⭐⭐⭐⭐⭐</strong>
+                <li>🔥 特色：曾是築地 No.1 壽司，魚料厚切、鮮甜，CP 值高！</li>
             </div>
             <div class="place">
-                <strong>丸武玉子燒（甜口玉子燒）</strong>
+                <strong>3️⃣ 仲家（仲家） ⭐⭐⭐⭐</strong>
+                <li>🔥 特色：平價新鮮海鮮丼，適合想快點吃到美食的人！</li>
             </div>
+            <h3>🦀 天婦羅 & 海鮮燒烤</h3>
             <div class="place">
-                <strong>つきぢ松露（超人氣玉子三明治）</strong>
-            </div>
-            <div class="place">
-                <strong>築地海鮮丼（鮮美海鮮丼）</strong>
+                <strong>4️⃣ 天房（天ぷら天房） ⭐⭐⭐⭐⭐</strong>
+                <li>🔥 特色：現炸酥脆天婦羅，穴子（星鰻）超大尾！</li>
+                <div class="place">
+                    <strong>5️⃣ 豐洲海鮮食堂（豊洲海鮮食堂） ⭐⭐⭐⭐</strong>
+                    <li>🔥 特色：可以吃到烤大牡蠣、烤干貝，想吃烤物這家最讚！</li>
+                </div>
+                <h3>🍜 其他特色美食</h3>
+                <div class="place">
+                    <strong>6️⃣ 米花（とんかつ八千代） ⭐⭐⭐⭐⭐</strong>
+                    <li>🔥 特色：海鮮炸物超厲害，尤其是炸牡蠣 & 炸大蝦！</li>
+                </div>
+                <div class="place">
+                    <strong>7️⃣ 小田保（とんかつ小田保） ⭐⭐⭐⭐</strong>
+                    <li>🔥 特色：炸豬排 + 鮮魚刺身雙拼，愛吃肉 & 海鮮的首選！</li>
+                </div>
             </div>
         </div>
 
