--- a/index.html
+++ b/index.html
@@ -536,16 +536,22 @@
                 <li>車票1500</li>
             </div>
             <div class="event">
-                <span class="time">20:30</span> - 木更津OUTLET>八重洲B2(12號)
+                <span class="time">18:30</span> - 木更津OUTLET>八重洲B2(12號)
                 <li>車票1500</li>
             </div>
             <div class="event">
-                <span class="time">21:20-22:30</span> - 東京車站B1(吃晚餐)
-                <li>✅ 「大阪燒 きじ」（道地大阪燒）</li>
-                <li>✅ 「炸豬排 まい泉」（東京有名炸豬排）</li>
+                <span class="time">19:30</span> - 東京車站>鶯谷
+                <li>🚆搭乘JR山手線</li>
             </div>
             <div class="event">
-                <span class="time">22:30</span> - 東京車站>南千住
+                <span class="time">20:30</span> - 晚餐-鳥貴族
+            </div>
+            <div class="event">
+                <span class="time">22:30</span> - 東京車站>鶯谷
+                <li>🚆搭乘JR山手線+JJ常磐線</li>
+            </div>
+            <div class="event">
+                <span class="time">20:30</span> - 鶯谷>南千住
                 <li>🚆搭乘JR山手線+日比谷線</li>
             </div>
         </div>
@@ -746,40 +752,34 @@
 
     <div id="itinerary-3" class="itinerary" style="display: none;">
         <div class="timeline">
-            <div class="day">🏮 Day 3｜淺草、上野、晴空塔、秋葉原</div>
+            <div class="day">🏮 Day 3｜上野、淺草、晴空塔、秋葉原</div>
             <div class="event">
-                <span class="time">08:50</span> - 南千住→淺草
+                <span class="time">08:50</span> - 南千住→上野
                 <li>🚆東京 Metro 日比谷線</li>
             </div>
             <div class="event">
-                <span class="time">09:25</span> - 早餐-淺草晨食屋
+                <span class="time">09:25</span> - 早餐-自行處理
             </div>
             <div class="event">
-                <span class="time">10:30</span> - 淺草雷門/淺草寺/仲見世商店街
+                <span class="time">09:25</span> - 上野動物園
             </div>
             <div class="event">
-                <span class="time">12:00</span> - 淺草→晴空塔
-                <li>🚆都營淺草線至押上站</li>
+                <span class="time">14:10</span> - 上野→淺草
+                <li>🚆G銀座線</li>
             </div>
             <div class="event">
-                <span class="time">12:30</span> - 午餐 六厘舍（濃厚魚介沾麵）
+                <span class="time">14:30</span> - 淺草雷門/淺草寺/仲見世商店街
             </div>
             <div class="event">
-                <span class="time">14:00</span> - 晴空塔觀景台 & 購物
+                <span class="time">17:30</span> - 淺草→晴空塔
+                <li>🚆A 淺草線</li>
             </div>
             <div class="event">
-                <span class="time">16:00</span> - 晴空塔→上野
-                <li>🚆東武 Skytree Line 至上野站</li>
+                <span class="time">17:40</span> - 晴空塔觀景台 & 購物
             </div>
             <div class="event">
-                <span class="time">16:30</span> - 逛上野公園 & 阿美橫町
-            </div>
-            <div class="event">
-                <span class="time">18:30</span> - 上野晚餐（燒肉 / 壽喜燒）
-            </div>
-            <div class="event">
-                <span class="time">20:00</span> - 上野→秋葉原
-                <li>🚆JR 山手線至秋葉原</li>
+                <span class="time">20:00</span> - 晴空塔→秋葉原
+                <li>🚆A 淺草線+ H 日比谷線</li>
             </div>
             <div class="event">
                 <span class="time">20:05</span> - 逛秋葉原（Animate、電器街）
@@ -893,10 +893,10 @@
     <div id="itinerary-4" class="itinerary" style="display: none;">
 
         <div class="timeline">
-            <div class="day">🍣 Day 4｜豐洲市場、銀座、東京車站、東京鐵塔</div>
+            <div class="day">🍣 Day 4｜築地市場、銀座、東京車站、東京鐵塔</div>
             <div class="event">
-                <span class="time">07:30</span> - 南千住 → 豐洲市場
-                <li>🚆日比谷線 → 有樂町線</li>
+                <span class="time">07:30</span> - 南千住 → 築地市場
+                <li>🚆搭乘日比谷線 → 有樂町線 </li>
             </div>
             <div class="event">
                 <span class="time">08:00</span> - 豐洲市場內早餐
@@ -904,7 +904,7 @@
             </div>
             <div class="event">
                 <span class="time">11:00</span> - 豐洲市場 → 銀座
-                <li>🚆搭成有樂町線</li>
+                <li>🚆搭乘樂町線</li>
             </div>
             <div class="event">
                 <span class="time">11:30</span> - 逛 UNIQLO、三越百貨、Loft、無印良品
